Fix #6404 : Version dropdown on download page doesn't scroll on overflow (#6411)
* Fix #6404 : Version dropdown on download page doesn't scroll on overflow

* Fix #6404 : Version dropdown on download page doesn't scroll on overflow (Updated v1)

* Fix #6404 : Version dropdown on download page doesn't scroll on overflow (Updated v2)

--- a/components/Common/Select/index.module.css
+++ b/components/Common/Select/index.module.css
@@ -59,8 +59,10 @@
 }
 
 .dropdown {
-  @apply max-w-xs
+  @apply max-h-48
+    max-w-xs
     overflow-hidden
+    overflow-y-auto
     rounded-md
     border
     border-neutral-200
